[gd_scene load_steps=11 format=2]

[ext_resource path="res://Game/MainScreens/AccountsPanel/AccountPanel.gd" type="Script" id=1]
[ext_resource path="res://Game/GUI/Accounts/grey_panel.png" type="Texture" id=2]
[ext_resource path="res://Game/Fonts/Audiowide/Audiowide-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Game/GUI/Accounts/delete.png" type="Texture" id=4]
[ext_resource path="res://Game/GUI/Buttons/blue-button-normal.png" type="Texture" id=5]
[ext_resource path="res://Game/GUI/Buttons/blue-button-press.png" type="Texture" id=6]
[ext_resource path="res://Game/GUI/Buttons/blue-button-hover.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]

size = 32
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 28
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=3]

size = 32
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="AccountPanel" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 500.0
margin_bottom = 240.0
rect_min_size = Vector2( 500, 240 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource( 1 )
_sections_unfolded = [ "Size Flags" ]

[node name="Panel" type="NinePatchRect" parent="."]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 500.0
margin_bottom = 221.0
rect_min_size = Vector2( 500, 100 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
patch_margin_left = 33
patch_margin_top = 33
patch_margin_right = 33
patch_margin_bottom = 33
_sections_unfolded = [ "Patch Margin", "Rect" ]

[node name="VBox" type="VBoxContainer" parent="Panel"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 2.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 0
_sections_unfolded = [ "Size Flags" ]

[node name="HBox" type="HBoxContainer" parent="Panel/VBox"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 500.0
margin_bottom = 41.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="AccountTitle" type="Label" parent="Panel/VBox/HBox"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 458.0
margin_bottom = 41.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 7
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.0541687, 0.132375, 0.554688, 1 )
custom_colors/font_color_shadow = Color( 0.047456, 0.0285339, 0.214844, 1 )
text = "Account"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Size Flags", "custom_colors", "custom_fonts" ]

[node name="DeleteAccount" type="TextureButton" parent="Panel/VBox/HBox"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 462.0
margin_right = 500.0
margin_bottom = 41.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 8
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 4 )
_sections_unfolded = [ "Size Flags", "Textures" ]

[node name="AccountName" type="Label" parent="Panel/VBox"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 45.0
margin_right = 500.0
margin_bottom = 81.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.769531, 0.0300598, 0.0300598, 1 )
custom_colors/font_color_shadow = Color( 0.164062, 0.0160217, 0.0160217, 1 )
text = "Account Name"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="Team" type="Label" parent="Panel/VBox"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 85.0
margin_right = 500.0
margin_bottom = 126.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.0541687, 0.132375, 0.554688, 1 )
custom_colors/font_color_shadow = Color( 0.047456, 0.0285339, 0.214844, 1 )
text = "Team"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="Grid" type="GridContainer" parent="Panel/VBox"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 130.0
margin_right = 500.0
margin_bottom = 166.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
size_flags_horizontal = 5
size_flags_vertical = 1
columns = 2
_sections_unfolded = [ "Anchor", "Focus", "Grow Direction", "Hint", "Margin", "Mouse", "Rect", "Size Flags" ]

[node name="Name1" type="Label" parent="Panel/VBox/Grid"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 244.0
margin_bottom = 36.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 5
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.769531, 0.0300598, 0.0300598, 1 )
custom_colors/font_color_shadow = Color( 0.164062, 0.0160217, 0.0160217, 1 )
text = "Pepito"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Size Flags", "custom_colors", "custom_fonts" ]

[node name="Name1Level" type="Label" parent="Panel/VBox/Grid"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 248.0
margin_right = 499.0
margin_bottom = 36.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 5
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.660956, 0.84375, 0.0889893, 1 )
custom_colors/font_color_shadow = Color( 0.347448, 0.441406, 0.0534515, 1 )
text = "LVL 10"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Material", "Size Flags", "Visibility", "custom_colors", "custom_fonts" ]

[node name="Play" type="TextureButton" parent="Panel/VBox"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 155.0
margin_top = 174.0
margin_right = 345.0
margin_bottom = 223.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
size_flags_horizontal = 6
size_flags_vertical = 10
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 7 )
_sections_unfolded = [ "Size Flags", "Textures" ]

[node name="Label" type="Label" parent="Panel/VBox/Play"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
text = "Play"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[connection signal="pressed" from="Panel/VBox/HBox/DeleteAccount" to="." method="_on_DeleteAccount_pressed"]


